--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,14 +1,21 @@
 [package]
 name = "wl-tablet"
 version = "0.1.0"
+authors = ["aspen <fuzzyzilla01@gmail.com>"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-raw-window-handle = "0.6.0"
-softbuffer = "0.4.0"
+bitflags = "2.4.2"
+raw-window-handle = "0.5.0"
+strum = { version = "0.25.0", features = ["derive"] }
+thiserror = "1.0.56"
 wayland-backend = { version = "0.3.2", features = ["client_system"] }
 wayland-client = "0.31.1"
 wayland-protocols = { version = "0.31.0", features = ["client", "unstable"] }
-winit = "0.29.7"
+
+[dev-dependencies]
+eframe = {version = "0.25.0", default-features = false, features = ["accesskit", "wayland", "default_fonts", "glow"] }
+winit = {version = "0.29.10", default-features = false, features = ["wayland", "rwh_05"]}
+softbuffer = "0.4.1"
