--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,10 +45,11 @@ wayland-client = { version = "0.31.1", optional = true }
 wayland-protocols = { version = "0.31.0", features = ["client", "unstable"], optional = true }
 
 # Windows Ink `RealTimeStylus`
-[target.'cfg(target_os = "windows")'.dependencies.windows]
+[target.'cfg(any(target_os = "windows", unix))'.dependencies.windows]
 version = "0.52.0"
 optional = true
 features = [
+    "implement",
     "Win32_UI_TabletPC",
     "Win32_System_Com",
     "Win32_Foundation",
