--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,7 +52,7 @@ optional = true
 features = [
     "implement",
     "Win32_UI_TabletPC",
-    "Win32_System_Com",
+    "Win32_System_Com_Marshal",
     "Win32_Foundation",
 ]
 
@@ -67,8 +67,8 @@ wayland-tablet-unstable-v2 = ["wayland-backend", "wayland-client", "wayland-prot
 windows-ink = ["windows"]
 
 [dev-dependencies]
-eframe = {version = "0.26.0", default-features = false, features = ["accesskit", "wayland", "default_fonts", "glow"] }
-winit = {version = "0.29.10", default-features = false, features = ["wayland", "rwh_06"]}
+eframe = "0.26.0" 
+winit = "0.29.10"
 tiny-skia = {version = "0.11.3", default-features = false, features = ["std", "simd"]}
 usb-ids = "1.2024.1"
 softbuffer = "0.4.1"
