--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ keywords = [
     "tablet",
     "stylus",
     "pen",
+    "ink",
 ]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -34,20 +35,20 @@ rustdoc-args = ["--cfg", "docsrs"]
 bitflags = "2.4.2"
 enum_dispatch = "0.3.12"
 raw-window-handle = "0.6.0"
-strum = { version = "0.25.0", features = ["derive"] }
-thiserror = "1.0.56"
+strum = { version = "0.26.2", features = ["derive"] }
+thiserror = "1.0.58"
 smallvec = "1.13.1"
 
 # Wayland `tablet_unstable_v2` deps.
 # Crazy `cfg` stolen verbatim from winit's Cargo.toml as I assume they have more wisdom than I
-[target.'cfg(all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos"))))'.dependencies]
-wayland-backend = { version = "0.3.2", features = ["client_system"], optional = true }
-wayland-client = { version = "0.31.1", optional = true }
-wayland-protocols = { version = "0.31.0", features = ["client", "unstable"], optional = true }
+[target.'cfg(any(docsrs, all(unix, not(any(target_os = "redox", target_family = "wasm", target_os = "android", target_os = "ios", target_os = "macos")))))'.dependencies]
+wayland-backend = { version = "0.3.3", features = ["client_system"], optional = true }
+wayland-client = { version = "0.31.2", optional = true }
+wayland-protocols = { version = "0.31.2", features = ["client", "unstable"], optional = true }
 
 # Windows Ink `RealTimeStylus`
-[target.'cfg(target_os = "windows")'.dependencies.windows]
-version = "0.52.0"
+[target.'cfg(any(docsrs, target_os = "windows"))'.dependencies.windows]
+version = "0.54.0"
 optional = true
 features = [
     "implement",
@@ -68,10 +69,10 @@ wayland-tablet-unstable-v2 = ["wayland-backend", "wayland-client", "wayland-prot
 windows-ink = ["windows"]
 
 [dev-dependencies]
-eframe = "0.26.0" 
-winit = "0.29.10"
-tiny-skia = {version = "0.11.3", default-features = false, features = ["std", "simd"]}
-usb-ids = "1.2024.1"
+eframe = "0.26.2" 
+winit = "0.29.15"
+tiny-skia = {version = "0.11.4", default-features = false, features = ["std", "simd"]}
+usb-ids = "1.2024.2"
 softbuffer = "0.4.1"
 
 [build-dependencies]
